# exhausterr

./: 404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: publish-doc.yml  publish-to-pypi.yml  run-tests.yml
differences_returns/: index.html
docs/: differences_returns.md  index.md  manifesto.md  tutorials.md
examples/: results.py  results_with_if.py
manifesto/: index.html
search/: search_index.json
src/exhausterr/: __init__.py  _builtin.py  _errors.py  _iterators.py  _results.py  builtin.py  errors.py  results.py  type_utils.py
tests/: test_builtin.py  test_errors.py  test_iterators.py  test_results.py
tutorials/: index.html
